[gd_scene load_steps=5 format=3 uid="uid://nkfhx8joo46q"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_esd1k"]
[ext_resource type="PackedScene" uid="uid://c6sl88rlcnd53" path="res://scenes/register.tscn" id="2_2cgpu"]
[ext_resource type="VideoStream" path="res://assets/doxc2z4iisw71.ogv" id="2_p7b7s"]
[ext_resource type="PackedScene" uid="uid://br4bm1cvyo6xw" path="res://scenes/login.tscn" id="4_smxb2"]

[node name="main" type="Control"]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = 2954.0
offset_bottom = 1591.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_esd1k")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 2
offset_right = 1157.0
offset_bottom = 724.0
size_flags_vertical = 3
stream = ExtResource("2_p7b7s")
autoplay = true
expand = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 488.0
offset_right = 149.0
offset_bottom = 624.0

[node name="Register" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Login")
mouse_default_cursor_shape = 2
text = "Register"

[node name="Login" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Register")
focus_neighbor_bottom = NodePath("../Instructions")
mouse_default_cursor_shape = 2
text = "Login"

[node name="Instructions" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Login")
focus_neighbor_bottom = NodePath("../Quit")
mouse_default_cursor_shape = 2
text = "Instructions"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Instructions")
focus_neighbor_bottom = NodePath("../Register")
mouse_default_cursor_shape = 2
text = "Quit
"

[node name="register" parent="VBoxContainer" instance=ExtResource("2_2cgpu")]
position = Vector2(8, -465)

[node name="choose_archid" parent="VBoxContainer" instance=ExtResource("4_smxb2")]
visible = false
position = Vector2(-35, -441)

[connection signal="pressed" from="VBoxContainer/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_logic_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
